--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Morphing faces : Repository for the Morphing Faces demo" />
+    <meta name="description" content="Morphing Faces : Repository for the Morphing Faces demo" />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Morphing faces</title>
+    <title>Morphing Faces</title>
   </head>
 
   <body>
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/vdumoulin/morphing_faces">View on GitHub</a>
 
-          <h1 id="project_title">Morphing faces</h1>
+          <h1 id="project_title">Morphing Faces</h1>
           <h2 id="project_tagline">Repository for the Morphing Faces demo</h2>
 
             <section id="downloads">
@@ -68,7 +68,7 @@ $ git checkout gh-pages
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Morphing faces maintained by <a href="https://github.com/vdumoulin">vdumoulin</a></p>
+        <p class="copyright">Morphing Faces maintained by <a href="https://github.com/vdumoulin">vdumoulin</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
