Test commit for MathJax support

--- a/index.html
+++ b/index.html
@@ -2,4 +2,13 @@
 layout: default
 ---
 
-WRITEME
+\\[
+  p\_{RBM}(\mathbf{v}) = \sum\_{\mathbf{h}} p(\mathbf{v}, \mathbf{h})
+                       = \sum\_{\mathbf{h}} \frac{
+                             \exp(-E(\mathbf{v}, \mathbf{h}))
+                         }{
+                             \sum\_{\tilde{\mathbf{v}}, \tilde{\mathbf{h}}}
+                             \exp(-E(\tilde{\mathbf{v}}, \tilde{\mathbf{h}}))
+                         }
+                       = \sum\_{\mathbf{h}} \frac{\exp(-E(\mathbf{v}, \mathbf{h}))}{Z}
+\\]
